# chat-mcp

./: README.md  main.py  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  security.yml  tests.yml
src/chat_mcp/: __init__.py  ai_provider.py  easy_chat.py  ipc_handler.py  mcp_chat_handler.py  mcp_service.py  mcp_types.py
tests/: conftest.py  test_external.py  test_final_workflow.py  test_fixed_mcp.py  test_install.py  test_step2.py  test_step3.py  test_step4-5.py  test_step6.py  test_step7.py  test_step7_optimized.py
