[project]
name = "chat-mcp"
version = "0.1.1"
description = "MCP客户端库，用于在对话中调用MCP工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.16.0",
    "pydantic>=2.0.0",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
chat-mcp = "chat_mcp.cli:main"
